// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Transform pending transaction 1`] = `
{
  "amount": -5.4,
  "balance": null,
  "category": "travel",
  "counterparty_name": "Uber",
  "currency": "CAD",
  "currency_rate": null,
  "currency_source": null,
  "date": "2024-02-24",
  "description": "Uber",
  "id": "NxkDjlyk45cQoDm5PEqJuKJaw6qrj9cy89zBA",
  "merchant_name": "Uber",
  "method": "other",
  "name": "Uber 063015 SF**POOL**",
  "status": "pending",
}
`;

exports[`Transform income transaction 1`] = `
{
  "amount": -1500,
  "balance": null,
  "category": "travel",
  "counterparty_name": "United Airlines",
  "currency": "CAD",
  "currency_rate": null,
  "currency_source": null,
  "date": "2024-02-22",
  "description": null,
  "id": "5QKmMdaKWgtzkvKEPmqriLZR1mV3kMF5X9EeX",
  "merchant_name": "United Airlines",
  "method": "other",
  "name": "United Airlines",
  "status": "posted",
}
`;

exports[`Transform type transfer 1`] = `
{
  "amount": -31.53,
  "balance": null,
  "category": "travel",
  "counterparty_name": "Uber",
  "currency": "CAD",
  "currency_rate": null,
  "currency_source": null,
  "date": "2024-02-24",
  "description": "Uber",
  "id": "NxkDjlyk45cQoDm5PEqJuKJaw6qrj9cy89zBA",
  "merchant_name": "Uber",
  "method": "transfer",
  "name": "Uber 063015 SF**POOL**",
  "status": "pending",
}
`;

exports[`Transform accounts 1`] = `
{
  "balance": {
    "amount": 56302.06,
    "currency": "CAD",
  },
  "currency": "CAD",
  "enrollment_id": null,
  "expires_at": null,
  "id": "kKZWQnoZVqcBeN71qdyoh8mVoErgb7tL7gmBL",
  "institution": {
    "id": "ins_100546",
    "logo": "https://cdn-engine.midday.ai/ins_100546.jpg",
    "name": "American Funds Retirement Solutions",
    "provider": "plaid",
  },
  "name": "Plaid Mortgage",
  "resource_id": null,
  "type": "other_asset",
}
`;

exports[`Transform account balance 1`] = `
{
  "amount": 2000,
  "currency": "USD",
}
`;
